welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:8: error: not found: value &&
  if ((outsideMode)&&(in))&&((n!=10)||(n!=1)) {
                          ^